.antlr/LolcodeParser.java
// Generated from /Users/mariapichor/Desktop/LOLCODE2Python/Lolcode.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LolcodeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, HAI=4, KTHXBYE=5, VISIBLE=6, GIMMEH=7, IHASA=8, 
		ITZ=9, R=10, SUM_OF=11, DIFF_OF=12, PRODUKT_OF=13, QUOSHUNT_OF=14, MOD_OF=15, 
		BIGGR_OF=16, SMALLR_OF=17, BOTH_OF=18, EITHER_OF=19, WON_OF=20, NOT=21, 
		ALL_OF=22, ANY_OF=23, BOTH_SAEM=24, DIFFRINT=25, AN=26, MKAY=27, O_RLY=28, 
		YA_RLY=29, NO_WAI=30, OIC=31, WTF=32, OMG=33, OMGWTF=34, GTFO=35, IM_IN_YR=36, 
		IM_OUTTA_YR=37, UPPIN=38, NERFIN=39, YR=40, TIL=41, WILE=42, HOW_IZ_I=43, 
		IF_U_SAY_SO=44, FOUND_YR=45, I_IZ=46, WIN=47, FAIL=48, CANHAS=49, LIBRARY_NAME=50, 
		NUMBER=51, ID=52, STRING=53, COMMENT=54, BLOCK_COMMENT=55, NL=56, WS=57;
	public static final int
		RULE_program = 0, RULE_version = 1, RULE_includes = 2, RULE_body = 3, 
		RULE_statement = 4, RULE_print_stmt = 5, RULE_var_decl = 6, RULE_assign_stmt = 7, 
		RULE_input_stmt = 8, RULE_if_stmt = 9, RULE_switch_stmt = 10, RULE_loop_stmt = 11, 
		RULE_func_decl = 12, RULE_func_call = 13, RULE_return_stmt = 14, RULE_expression = 15, 
		RULE_binary_op = 16, RULE_unary_op = 17, RULE_multi_op = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "version", "includes", "body", "statement", "print_stmt", 
			"var_decl", "assign_stmt", "input_stmt", "if_stmt", "switch_stmt", "loop_stmt", 
			"func_decl", "func_call", "return_stmt", "expression", "binary_op", "unary_op", 
			"multi_op"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'?'", "'('", "')'", "'HAI'", "'KTHXBYE'", "'VISIBLE'", "'GIMMEH'", 
			"'I HAS A'", "'ITZ'", "'R'", "'SUM OF'", "'DIFF OF'", "'PRODUKT OF'", 
			"'QUOSHUNT OF'", "'MOD OF'", "'BIGGR OF'", "'SMALLR OF'", "'BOTH OF'", 
			"'EITHER OF'", "'WON OF'", "'NOT'", "'ALL OF'", "'ANY OF'", "'BOTH SAEM'", 
			"'DIFFRINT'", "'AN'", "'MKAY'", "'O RLY?'", "'YA RLY'", "'NO WAI'", "'OIC'", 
			"'WTF?'", "'OMG'", "'OMGWTF'", "'GTFO'", "'IM IN YR'", "'IM OUTTA YR'", 
			"'UPPIN'", "'NERFIN'", "'YR'", "'TIL'", "'WILE'", "'HOW IZ I'", "'IF U SAY SO'", 
			"'FOUND YR'", "'I IZ'", "'WIN'", "'FAIL'", "'CAN HAS'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "HAI", "KTHXBYE", "VISIBLE", "GIMMEH", "IHASA", 
			"ITZ", "R", "SUM_OF", "DIFF_OF", "PRODUKT_OF", "QUOSHUNT_OF", "MOD_OF", 
			"BIGGR_OF", "SMALLR_OF", "BOTH_OF", "EITHER_OF", "WON_OF", "NOT", "ALL_OF", 
			"ANY_OF", "BOTH_SAEM", "DIFFRINT", "AN", "MKAY", "O_RLY", "YA_RLY", "NO_WAI", 
			"OIC", "WTF", "OMG", "OMGWTF", "GTFO", "IM_IN_YR", "IM_OUTTA_YR", "UPPIN", 
			"NERFIN", "YR", "TIL", "WILE", "HOW_IZ_I", "IF_U_SAY_SO", "FOUND_YR", 
			"I_IZ", "WIN", "FAIL", "CANHAS", "LIBRARY_NAME", "NUMBER", "ID", "STRING", 
			"COMMENT", "BLOCK_COMMENT", "NL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Lolcode.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LolcodeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode HAI() { return getToken(LolcodeParser.HAI, 0); }
		public TerminalNode NL() { return getToken(LolcodeParser.NL, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode KTHXBYE() { return getToken(LolcodeParser.KTHXBYE, 0); }
		public VersionContext version() {
			return getRuleContext(VersionContext.class,0);
		}
		public IncludesContext includes() {
			return getRuleContext(IncludesContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(HAI);
			setState(40);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NUMBER) {
				{
				setState(39);
				version();
				}
			}

			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CANHAS) {
				{
				setState(42);
				includes();
				}
			}

			setState(45);
			match(NL);
			setState(46);
			body();
			setState(47);
			match(KTHXBYE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VersionContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(LolcodeParser.NUMBER, 0); }
		public VersionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_version; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).enterVersion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).exitVersion(this);
		}
	}

	public final VersionContext version() throws RecognitionException {
		VersionContext _localctx = new VersionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_version);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IncludesContext extends ParserRuleContext {
		public TerminalNode CANHAS() { return getToken(LolcodeParser.CANHAS, 0); }
		public TerminalNode LIBRARY_NAME() { return getToken(LolcodeParser.LIBRARY_NAME, 0); }
		public IncludesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_includes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).enterIncludes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).exitIncludes(this);
		}
	}

	public final IncludesContext includes() throws RecognitionException {
		IncludesContext _localctx = new IncludesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_includes);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(CANHAS);
			setState(52);
			match(LIBRARY_NAME);
			setState(53);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BodyContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(LolcodeParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(LolcodeParser.NL, i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).exitBody(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_body);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(57);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case T__1:
					case VISIBLE:
					case GIMMEH:
					case IHASA:
					case SUM_OF:
					case DIFF_OF:
					case PRODUKT_OF:
					case QUOSHUNT_OF:
					case MOD_OF:
					case BIGGR_OF:
					case SMALLR_OF:
					case BOTH_OF:
					case EITHER_OF:
					case WON_OF:
					case NOT:
					case ALL_OF:
					case ANY_OF:
					case BOTH_SAEM:
					case DIFFRINT:
					case GTFO:
					case IM_IN_YR:
					case HOW_IZ_I:
					case FOUND_YR:
					case I_IZ:
					case WIN:
					case FAIL:
					case NUMBER:
					case ID:
					case STRING:
						{
						setState(55);
						statement();
						}
						break;
					case NL:
						{
						setState(56);
						match(NL);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(61);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Print_stmtContext print_stmt() {
			return getRuleContext(Print_stmtContext.class,0);
		}
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public Assign_stmtContext assign_stmt() {
			return getRuleContext(Assign_stmtContext.class,0);
		}
		public Input_stmtContext input_stmt() {
			return getRuleContext(Input_stmtContext.class,0);
		}
		public If_stmtContext if_stmt() {
			return getRuleContext(If_stmtContext.class,0);
		}
		public Switch_stmtContext switch_stmt() {
			return getRuleContext(Switch_stmtContext.class,0);
		}
		public Loop_stmtContext loop_stmt() {
			return getRuleContext(Loop_stmtContext.class,0);
		}
		public Func_declContext func_decl() {
			return getRuleContext(Func_declContext.class,0);
		}
		public Func_callContext func_call() {
			return getRuleContext(Func_callContext.class,0);
		}
		public Return_stmtContext return_stmt() {
			return getRuleContext(Return_stmtContext.class,0);
		}
		public TerminalNode GTFO() { return getToken(LolcodeParser.GTFO, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statement);
		try {
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				print_stmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(63);
				var_decl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(64);
				assign_stmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(65);
				input_stmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(66);
				if_stmt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(67);
				switch_stmt();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(68);
				loop_stmt();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(69);
				func_decl();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(70);
				func_call();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(71);
				return_stmt();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(72);
				match(GTFO);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Print_stmtContext extends ParserRuleContext {
		public TerminalNode VISIBLE() { return getToken(LolcodeParser.VISIBLE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Print_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).enterPrint_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).exitPrint_stmt(this);
		}
	}

	public final Print_stmtContext print_stmt() throws RecognitionException {
		Print_stmtContext _localctx = new Print_stmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_print_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(VISIBLE);
			setState(76);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_declContext extends ParserRuleContext {
		public TerminalNode IHASA() { return getToken(LolcodeParser.IHASA, 0); }
		public TerminalNode ID() { return getToken(LolcodeParser.ID, 0); }
		public TerminalNode ITZ() { return getToken(LolcodeParser.ITZ, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).enterVar_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).exitVar_decl(this);
		}
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_var_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(IHASA);
			setState(79);
			match(ID);
			setState(82);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ITZ) {
				{
				setState(80);
				match(ITZ);
				setState(81);
				expression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Assign_stmtContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LolcodeParser.ID, 0); }
		public TerminalNode R() { return getToken(LolcodeParser.R, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Assign_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).enterAssign_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).exitAssign_stmt(this);
		}
	}

	public final Assign_stmtContext assign_stmt() throws RecognitionException {
		Assign_stmtContext _localctx = new Assign_stmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_assign_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(ID);
			setState(85);
			match(R);
			setState(86);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Input_stmtContext extends ParserRuleContext {
		public TerminalNode GIMMEH() { return getToken(LolcodeParser.GIMMEH, 0); }
		public TerminalNode ID() { return getToken(LolcodeParser.ID, 0); }
		public Input_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).enterInput_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).exitInput_stmt(this);
		}
	}

	public final Input_stmtContext input_stmt() throws RecognitionException {
		Input_stmtContext _localctx = new Input_stmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_input_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(GIMMEH);
			setState(89);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class If_stmtContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode O_RLY() { return getToken(LolcodeParser.O_RLY, 0); }
		public List<TerminalNode> NL() { return getTokens(LolcodeParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(LolcodeParser.NL, i);
		}
		public TerminalNode YA_RLY() { return getToken(LolcodeParser.YA_RLY, 0); }
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public TerminalNode OIC() { return getToken(LolcodeParser.OIC, 0); }
		public TerminalNode NO_WAI() { return getToken(LolcodeParser.NO_WAI, 0); }
		public If_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).enterIf_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).exitIf_stmt(this);
		}
	}

	public final If_stmtContext if_stmt() throws RecognitionException {
		If_stmtContext _localctx = new If_stmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_if_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			expression();
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NL) {
				{
				setState(92);
				match(NL);
				}
			}

			setState(95);
			match(O_RLY);
			setState(96);
			match(NL);
			setState(97);
			match(YA_RLY);
			setState(98);
			match(NL);
			setState(99);
			body();
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NO_WAI) {
				{
				setState(100);
				match(NO_WAI);
				setState(101);
				match(NL);
				setState(102);
				body();
				}
			}

			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NL) {
				{
				setState(105);
				match(NL);
				}
			}

			setState(108);
			match(OIC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Switch_stmtContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode WTF() { return getToken(LolcodeParser.WTF, 0); }
		public List<TerminalNode> NL() { return getTokens(LolcodeParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(LolcodeParser.NL, i);
		}
		public TerminalNode OIC() { return getToken(LolcodeParser.OIC, 0); }
		public List<TerminalNode> OMG() { return getTokens(LolcodeParser.OMG); }
		public TerminalNode OMG(int i) {
			return getToken(LolcodeParser.OMG, i);
		}
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public TerminalNode OMGWTF() { return getToken(LolcodeParser.OMGWTF, 0); }
		public Switch_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_switch_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).enterSwitch_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LolcodeListener ) ((LolcodeListener)listener).exitSwitch_stmt(this);
		}
	}

	public final Switch_stmtContext switch_stmt() throws RecognitionException {
		Switch_stmtContext _localctx = new Switch_stmtContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_switch_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			expression();
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NL) {
				{
				setState(111);
				match(NL);
				}
			}

			setState(114);
			match(WTF);
			setState(115);
			match(NL);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OMG) {
				{
				{
				setState(116);
				match(OMG);
				setState(117);
				expression();
				setState(118);
				match(NL);
				setState(119);
				body();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OMGWTF) {
				{
				setState(126);
				match(OMGWTF);
				setState(127);
				match(NL);
				setState(128);
				body();
				}
			}

			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NL) {
				{
				setState(131);
				match(NL);
				}
			}

			setState(134);
			match(OIC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
